[package]
name = "cifi-rs"
version = "0.1.0"
authors = ["Faithforus <ljunf817@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "0.11.0", default-features = false,features = ["sync"]}
serde = { version = "1.0", features = ["derive"] } # 序列化
amiquip = "0.3"
crossbeam-channel = "0.4"
redis = "0.16.0"